--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,85 +1,87 @@
 fr:
 
   ## GITOLITE SETTINGS
-  label_gitolite_settings: Gitolite Settings
+  label_gitolite_settings: Configuration Gitolite
 
-  label_gitolite_ssh_settings: Gitolite SSH Access
+  label_gitolite_ssh_settings: Accès Gitolite SSH
 
-  label_gitolite_identity_private_key_file: Gitolite SSH Identity File
-  label_gitolite_identity_private_key_file_desc: Private Key
+  label_gitolite_identity_private_key_file: Identité du fichier SSH de Gitolite
+  label_gitolite_identity_private_key_file_desc: Clé privée
 
-  label_gitolite_repositories_absolute_base_path: Gitolite Repositories Path
-  label_gitolite_repositories_absolute_base_path_desc: Must exist and be absolute, needed to browse code
+  label_gitolite_repositories_absolute_base_path: Chemin des dépôts Gitolite
+  label_gitolite_repositories_absolute_base_path_desc: Doit exister et être absolu, nécessaire pour visualiser le code
 
-  label_gitolite_username: Gitolite Username
-  label_gitolite_username_desc: Unix username
+  label_gitolite_username: Nom de l'utilisateur Gitolite
+  label_gitolite_username_desc: Nom de l'utilisateur Unix
 
   label_gitolite_lock_wait_time: Synchronization Lock Wait Time
-  label_gitolite_lock_wait_time_desc: in seconds
+  label_gitolite_lock_wait_time_desc: en secondes
 
   label_gitolite_http_settings: Gitolite HTTP Access
 
   label_gitolite_server_domain: Gitolite Server Domain
-  label_gitolite_server_domain_desc: Needed for access URL
+  label_gitolite_server_domain_desc: Nécessaire pour accèder via une URL
 
   label_gitolite_smart_http_prefix: Gitolite Smart HTTP prefix
-  label_gitolite_smart_http_prefix_desc: Optional
+  label_gitolite_smart_http_prefix_desc: Optionnel
 
-  label_gitolite_ssl_enabled: SSL Enabled?
+  label_gitolite_ssl_enabled: SSL activé ?
 
-  label_gitolite_all_projects_use_git: Automatically Initialize Git Repositories For New Projects
+  label_gitolite_all_projects_use_git: Initialiser automatiquement un dépôt Git pour les nouveaux projets
+  label_gitolite_all_projects_use_git_daemon: Initialiser automatiquement un daemon Git pour tout nouveau dépôt
+  label_gitolite_all_projects_use_git_smart: Initialiser automatiquement Smart HTTP pour tout nouveau dépôt
 
   ## RECYCLE BIN SETTINGS
   label_gitolite_recycle_bin_settings: Gitolite Recycle Bin
-  label_gitolite_recycle_expire_time: Expire Time for Repositories in Recycle Bin
-  label_gitolite_recycle_expire_time_desc: in hours
-  label_delete_git_repositories: Delete Git Repository When Project Deleted
-  label_delete_git_repositories_desc: Will be place in Recycle Bin
+  label_gitolite_recycle_expire_time: Délai d'expiration d'un dépôt dans Recycle Bin
+  label_gitolite_recycle_expire_time_desc: en heures
+  label_delete_git_repositories: Supprimer le dépôt git quand le projet est supprimé
+  label_delete_git_repositories_desc: Sera placé dans Recycle Bin
 
   ## VALIDATION SETTINGS
-  label_gitolite_validation_settings: Gitolite Validation
-  label_sudo_web_to_git_user: Web user is able to sudo to Git user?
-  label_sudo_git_to_web_user: Git user is able to sudo to Web user?
+  label_gitolite_validation_settings: Validation Gitolite
+  label_sudo_web_to_git_user: L'utilisateur Web est autorisé à sudo l'utilisateur Git?
+  label_sudo_git_to_web_user: L'utilisateur Git est autorisé à sudo l'utilisateur Web?
   label_gitolite_admin_url: Gitolite Admin URL
   label_gitolite_browse_url: Gitolite Browse Code URL
   label_gitolite_http_url: Gitolite Smart HTTP URL
   label_gitolite_ssh_url: Gitolite SSH URL
 
   ## NOTICES
-  notice_public_key_updated: Public key was successfully updated
-  notice_public_key_added: Public key was successfully added
+  notice_public_key_updated: La clé publique a bien été mise à jour
+  notice_public_key_added: La clé publique a bien été ajoutée
 
   ## ERRORS
-  error_cannot_change_selinux: Cannot Change in Current Configuration
-  error_git_repository_does_not_exist: Repository does not exist. Create one using the instructions below.
+  error_cannot_change_selinux: Impossible de changer dans la configuration actuelle
+  error_git_repository_does_not_exist: Le dépôt n'existe pas. En créer un en utilisant les instructions ci-dessous.
 
   ## FIELDS
-  field_public_key: Key
+  field_public_key: Clé
 
   ## VIEWS
-  label_public_keys: Public keys
-  label_public_key_new: New public key
+  label_public_keys: Clés publiques
+  label_public_key_new: Nouvelle clé publique
 
   ## MISC
-  label_enabled: Enabled
-  label_disabled: Disabled
-  label_true: "True"
-  label_false: "False"
+  label_enabled: Activé
+  label_disabled: Désactivé
+  label_true: "Vrai"
+  label_false: "Faux"
 
   ## GIT INSTRUCTIONS
-  label_git_setup: Git Setup
-  label_download_and_install_git: Download and Install Git
+  label_git_setup: Installation de Git
+  label_download_and_install_git: Télécharger et installer Git
 
-  label_repository_setup: Repository Setup
-  label_checkin_existing_git_repo: Checkin an existing Git repository
-  label_initializing_repository: Initializing repository
-  label_upload_ssh_public_key: Upload SSH Public Key
-  label_git_permission_setup: Permission Setup
-  label_add_yourself_as_developer: Add yourself as a project developer
+  label_repository_setup: Configuration du dépôt
+  label_checkin_existing_git_repo: Ajouter un dépôt Git existant
+  label_initializing_repository: Initialise le dépôt Git
+  label_upload_ssh_public_key: Ajouter sa clé publique SSH
+  label_git_permission_setup: Configuration des permissions
+  label_add_yourself_as_developer: Ajoutez-vous en tant que développeur de projet
 
   ## GIT SIDEBAR
-  label_git_repository_info: Repository Info
-  label_git_repository_name: Name
+  label_git_repository_info: Info sur le dépôt
+  label_git_repository_name: Nom
   label_git_browse_access: Browse Code
-  label_git_http_access: HTTP Access
-  label_git_ssh_access: SSH Access
+  label_git_http_access: Accès HTTP
+  label_git_ssh_access: Accès SSH
