--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -83,5 +83,6 @@ en:
   label_git_repository_info: Repository Info
   label_git_repository_name: Name
   label_git_browse_access: Browse Code
+  label_git_daemon_access: Read-only Access
   label_git_http_access: HTTP Access
   label_git_ssh_access: SSH Access
